--- a/package.json
+++ b/package.json
@@ -29,13 +29,19 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "bootstrap": "^4.6.0",
+    "dayjs": "^1.11.9",
+    "loadash": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-promise-middleware": "^6.1.3",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
