--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "axios": "^1.4.0",
     "bootstrap": "^4.6.0",
     "dayjs": "^1.11.9",
+    "i": "^0.3.7",
     "loadash": "^1.0.0",
+    "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -41,6 +43,7 @@
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "reduxjs-toolkit-persist": "^7.2.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
