--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^4.6.0",
     "dayjs": "^1.11.9",
+    "formik": "^2.4.2",
     "i": "^0.3.7",
     "loadash": "^1.0.0",
     "npm": "^9.8.1",
@@ -41,10 +42,12 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "reduxjs-toolkit-persist": "^7.2.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
