--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
