--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "reduxjs-toolkit-persist": "^7.2.1",
