--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "hosting": "firebase deploy --only hosting",
+    "deploy": "npm run build && npm run hosting",
     "tsc": "tsc --noEmit"
   },
   "eslintConfig": {
