--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-react": " react-scripts build",
+    "build": "CI=false npm run build-react",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "hosting": "firebase deploy --only hosting",
