--- a/.github/workflows/firebase-hosting-live.yml
+++ b/.github/workflows/firebase-hosting-live.yml
@@ -16,5 +16,6 @@ jobs:
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_VSHWAN }}'
-          channelId: live
           projectId: vshwan
+          channelId: live
+          target: live
