--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build": "CI=false npm run build-react",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "hosting": "firebase deploy --only hosting",
-    "deploy": "npm run build && npm run hosting",
+    "hosting:live": "firebase deploy --only hosting:live",
+    "hosting:staging": "firebase deploy --only hosting:staging",
+    "deploy:live": "npm run build && npm run hosting:live",
+    "deploy:staging": "npm run build && npm run hosting:staging",
     "tsc": "tsc --noEmit"
   },
   "eslintConfig": {
