--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "dayjs": "^1.11.9",
     "formik": "^2.4.2",
     "i": "^0.3.7",
-    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
