--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-bootstrap": "^2.8.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
